// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Rotate API 1`] = `
.c1 {
  line-height: 0;
}

.c1 > * {
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  -webkit-transition: transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  transition: transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c0 {
  display: inline-block;
  color: #00A1DE;
  font-size: 24px;
  cursor: pointer;
}

<Rotateexample__IconWrapper>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "Rotateexample__IconWrapper-yp16aq-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  display: inline-block;
  color: ",
            [Function],
            ";
  font-size: 24px;
  cursor: pointer;
",
          ],
        },
        "displayName": "Rotateexample__IconWrapper",
        "render": [Function],
        "styledComponentId": "Rotateexample__IconWrapper-yp16aq-0",
        "target": "div",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0"
    >
      <Rotate
        active={false}
      >
        <StyledComponent
          active={false}
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": undefined,
              "componentStyle": ComponentStyle {
                "componentId": "Rotate-sc-7d7mt1-0",
                "isStatic": false,
                "lastClassName": "c1",
                "rules": Array [
                  "
  line-height: 0;

  > * {
    transform-origin: center;
    transition: transform 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55);
    transform: ",
                  [Function],
                  ";
  }
",
                ],
              },
              "defaultProps": Object {
                "active": false,
              },
              "displayName": "Rotate",
              "propTypes": Object {
                "active": [Function],
              },
              "render": [Function],
              "styledComponentId": "Rotate-sc-7d7mt1-0",
              "target": "div",
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="c1"
          >
            <IconFold>
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M7.4 9.8l4.6 4.6 4.6-4.6 1.4 1.4-6 6-6-6 1.4-1.4z"
                />
              </svg>
            </IconFold>
          </div>
        </StyledComponent>
      </Rotate>
    </div>
  </StyledComponent>
</Rotateexample__IconWrapper>
`;

exports[`Storyshots Rotate With active props 1`] = `
.c1 {
  line-height: 0;
}

.c1 > * {
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  -webkit-transition: transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  transition: transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.c0 {
  display: inline-block;
  color: #00A1DE;
  font-size: 24px;
  cursor: pointer;
}

<Rotateexample__IconWrapper>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "Rotateexample__IconWrapper-yp16aq-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  display: inline-block;
  color: ",
            [Function],
            ";
  font-size: 24px;
  cursor: pointer;
",
          ],
        },
        "displayName": "Rotateexample__IconWrapper",
        "render": [Function],
        "styledComponentId": "Rotateexample__IconWrapper-yp16aq-0",
        "target": "div",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0"
    >
      <Rotate
        active={true}
      >
        <StyledComponent
          active={true}
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": undefined,
              "componentStyle": ComponentStyle {
                "componentId": "Rotate-sc-7d7mt1-0",
                "isStatic": false,
                "lastClassName": "c1",
                "rules": Array [
                  "
  line-height: 0;

  > * {
    transform-origin: center;
    transition: transform 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55);
    transform: ",
                  [Function],
                  ";
  }
",
                ],
              },
              "defaultProps": Object {
                "active": false,
              },
              "displayName": "Rotate",
              "propTypes": Object {
                "active": [Function],
              },
              "render": [Function],
              "styledComponentId": "Rotate-sc-7d7mt1-0",
              "target": "div",
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="c1"
          >
            <IconFold>
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M7.4 9.8l4.6 4.6 4.6-4.6 1.4 1.4-6 6-6-6 1.4-1.4z"
                />
              </svg>
            </IconFold>
          </div>
        </StyledComponent>
      </Rotate>
    </div>
  </StyledComponent>
</Rotateexample__IconWrapper>
`;

exports[`Storyshots Rotate With other icon 1`] = `
.c1 {
  line-height: 0;
}

.c1 > * {
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  -webkit-transition: transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  transition: transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c0 {
  display: inline-block;
  color: #00A1DE;
  font-size: 24px;
  cursor: pointer;
}

<StatefulRotate>
  <Rotateexample__IconWrapper>
    <StyledComponent
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "Rotateexample__IconWrapper-yp16aq-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: inline-block;
  color: ",
              [Function],
              ";
  font-size: 24px;
  cursor: pointer;
",
            ],
          },
          "displayName": "Rotateexample__IconWrapper",
          "render": [Function],
          "styledComponentId": "Rotateexample__IconWrapper-yp16aq-0",
          "target": "div",
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <Rotate
          active={false}
          onClick={[Function]}
        >
          <StyledComponent
            active={false}
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": undefined,
                "componentStyle": ComponentStyle {
                  "componentId": "Rotate-sc-7d7mt1-0",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  line-height: 0;

  > * {
    transform-origin: center;
    transition: transform 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55);
    transform: ",
                    [Function],
                    ";
  }
",
                  ],
                },
                "defaultProps": Object {
                  "active": false,
                },
                "displayName": "Rotate",
                "propTypes": Object {
                  "active": [Function],
                },
                "render": [Function],
                "styledComponentId": "Rotate-sc-7d7mt1-0",
                "target": "div",
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            onClick={[Function]}
          >
            <div
              className="c1"
              onClick={[Function]}
            >
              <IconGoDown>
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M12 18.9l5-5h-3.8V5.1h-2.5v8.8H7l5 5z"
                  />
                </svg>
              </IconGoDown>
            </div>
          </StyledComponent>
        </Rotate>
      </div>
    </StyledComponent>
  </Rotateexample__IconWrapper>
</StatefulRotate>
`;

exports[`Storyshots Rotate With state 1`] = `
.c1 {
  line-height: 0;
}

.c1 > * {
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  -webkit-transition: transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  transition: transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c0 {
  display: inline-block;
  color: #00A1DE;
  font-size: 24px;
  cursor: pointer;
}

<StatefulRotate>
  <Rotateexample__IconWrapper>
    <StyledComponent
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "Rotateexample__IconWrapper-yp16aq-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: inline-block;
  color: ",
              [Function],
              ";
  font-size: 24px;
  cursor: pointer;
",
            ],
          },
          "displayName": "Rotateexample__IconWrapper",
          "render": [Function],
          "styledComponentId": "Rotateexample__IconWrapper-yp16aq-0",
          "target": "div",
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <Rotate
          active={false}
          onClick={[Function]}
        >
          <StyledComponent
            active={false}
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": undefined,
                "componentStyle": ComponentStyle {
                  "componentId": "Rotate-sc-7d7mt1-0",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  line-height: 0;

  > * {
    transform-origin: center;
    transition: transform 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55);
    transform: ",
                    [Function],
                    ";
  }
",
                  ],
                },
                "defaultProps": Object {
                  "active": false,
                },
                "displayName": "Rotate",
                "propTypes": Object {
                  "active": [Function],
                },
                "render": [Function],
                "styledComponentId": "Rotate-sc-7d7mt1-0",
                "target": "div",
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            onClick={[Function]}
          >
            <div
              className="c1"
              onClick={[Function]}
            >
              <IconFold>
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M7.4 9.8l4.6 4.6 4.6-4.6 1.4 1.4-6 6-6-6 1.4-1.4z"
                  />
                </svg>
              </IconFold>
            </div>
          </StyledComponent>
        </Rotate>
      </div>
    </StyledComponent>
  </Rotateexample__IconWrapper>
</StatefulRotate>
`;
